# frametrix

./: Cargo.toml  README.md  build.rs
src/: config.rs  error.rs  main.rs
src/device/: led_matrix.rs  matrix_ops.rs  mod.rs  util.rs
ui/: main_window.slint
ui/components/: button_matrix.slint  page.slint  sidebar.slint
ui/globals/: matrix_state.slint  palette.slint
ui/pages/: matrix_control_page.slint  pages.slint  pattern_page.slint  settings_page.slint
