[package]
name = "frametrix"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = " Tool to manage LED matrix device on framework laptop"
homepage = "https://codeberg.org/drendog/frametrix"
repository = "https://codeberg.org/drendog/frametrix"
readme = "README.md"

[dependencies]
anyhow = "1.0.91"
home = "0.5.9"
serde = { version = "1.0.214", features = ["derive"] }
serialport = "4.6.0"
slint = "1.8.0"
thiserror = "1.0.65"
toml_edit = { version = "0.22.22", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
slint-build = "1.8.0"
